docs/api/qiskit/0.19/qiskit.transpiler.passes.CXCancellation.mdx
---
title: CXCancellation (v0.19)
description: API reference for qiskit.transpiler.passes.CXCancellation in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CXCancellation
---

# CXCancellation

<Class id="qiskit.transpiler.passes.CXCancellation" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/transpiler/passes/optimization/cx_cancellation.py" signature="CXCancellation(*args, **kwargs)" modifiers="class">
  Cancel back-to-back cx gates in dag.

  ## Attributes

  <span id="cxcancellation-is-analysis-pass" />

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CXCancellation.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  <span id="cxcancellation-is-transformation-pass" />

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CXCancellation.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  <span id="cxcancellation-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CXCancellation.name" signature="CXCancellation.name()">
    Return the name of the pass.
  </Function>

  <span id="cxcancellation-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CXCancellation.run" signature="CXCancellation.run(dag)">
    Run the CXCancellation pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – the directed acyclic graph to run on.

    **Returns**

    Transformed DAG.

    **Return type**

    [DAGCircuit](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")
  </Function>
</Class>

